// mapper.proto
syntax = "proto3";

option go_package = "./proto";

message MapperInput {
  float page_rank = 1;
  repeated int32 adjacency_list = 2;
}

message MapperOutput {
  float page_rank_share = 1;
  repeated int32 adjacency_list = 2;
}


service Mapper {
  rpc Map(MapperInput) returns (MapperOutput);
  //TODO  rpc CleanUp() returns ()
}